small fixes: simplify game service and remove unused dependencies
Remove unused imports, fields, and method parameters in GameService and
GameSocketController. Update method signatures to eliminate redundant
arguments, particularly in startGame and scheduleGameFinish methods.
Modernize list access by using getFirst() instead of get(0).